--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,14 @@
         {% endif %}
     </head>
     <body>
-
+        <body>
+            <!-- Popular new section  -->
+            <h3> Popular news sources</h3>
+             <ul>
+                {% for popular_news in popular %}
+                    <li>{{ popular_news.name}}</li>
+                {% endfor %}
+            </ul>
+     </body>
     </body>
 </html>
