--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -11,7 +11,7 @@
     <body>
         <body>
             <!-- Popular new section  -->
-            <h3> Popular news sources</h3>
+            <h3> Top news sources</h3>
              <ul>
                 {% for popular_news in popular %}
                     <li>{{ popular_news.name}}</li>
