--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        {% if title %}
-        <title> {{ title }}</title>
-        {% else %}
-        <title> Welcome to The Best news broadcast Online </title>
-        {% endif %}
-    </head>
-    <body>
-        <!-- Content block -->
+{% extends 'bootstrap/base.html'%}
 
-        {% block content %}
-
-        {% endblock%}
-    </body>
-</html>
+{% block navbar %}
+    {% include 'navbar.html' %}
+{% endblock %}
