--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -14,6 +14,7 @@
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
                 <li><a href="/">Politics</a></li>
+                <li><a href="/">Business</a></li>
                 <li><a href="/">Education</a></li>
                 <li><a href="/">Health</a></li>
                 <li><a href="/">Sports</a></li>
