--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,2 +1,22 @@
 {% extends 'base.html'%}
-{% import 'macros.html' as macro%}
+<!-- Content block -->
+{% block content %}
+<div class="container">
+
+    <!-- Poster background -->
+    <div class="row">
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{news.url}}) no-repeat center center">
+        </div>
+
+        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
+            <h3>{{ news.name }}</h3>
+
+            <p class="overview"> {{ news.category }}</p>
+            <p class="ratings"> <b> {{ news.country }}</b> - <i>{{ news.description}} votes </i> </p>
+
+
+        </div>
+    </div>
+
+</div>
+{% endblock %}
