--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,16 @@
 
 
         {% block content %}
-            <!-- Popular new section  -->
+             <!-- Popular new section  -->
             <h3> Top news sources</h3>
              <ul>
                 {% for popular_news in popular %}
                     <li>{{ popular_news.name}}</li>
+                    <li>{{ popular_news.description}}</li>
+                    <li> <a href="{{ popular_news.url}}" >{{ popular_news.url}}</a></li>
+                 
                 {% endfor %}
-            </ul>
+            </ul> 
      
 {% endblock%}
 
