--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,7 +3,7 @@
 {% macro displayNewsList(news_list) %}
 
     {% for news in news_list %}
-        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+        <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 news-card">
             <img src="{{ news.urlToImage }}" alt="{{ news.name }} urlToImage" class="img-responsive">
             <li class="text-center">
                 <a href="/news/{{news.id}}">
