--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -14,3 +14,46 @@
     {% endfor %}
 
 {% endmacro %}
+
+
+
+{% macro displayTrending(category_list) %}
+{% for category in category_list %}
+
+<div class="col-md-4 mb-2 mt-2">
+    <div class="card" style="width: 18rem;">
+
+        <img src="{{category.urlToImage}}" class="card-img-top" alt="..." height="300px">
+        <div class="card-body">
+            <h5 class="card-title">{{category.title[:30]}}</h5>
+            <p class="card-text">{{category.publishedAt}}</p>
+            <p class="card-text">{{category.author}}</p>
+            <p class="card-text">{{category.id}}</p>
+            <a href="{{category.url}}" class="btn" style="background-color: green;">Read More</a>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% endmacro %}
+
+
+{% macro displayArticles(articles_list) %}
+{% for articles in articles_list %}
+
+
+<div class="col-md-3 mb-3 mt-2">
+    <div class="card" style="width: 18rem;">
+
+        <img src="{{articles.urlToImage}}" class="card-img-top" alt="..." height="300px">
+        <div class="card-body">
+            <h5 class="card-title">{{articles.title}}</h5>
+            <p class="card-text">{{articles.publishedAt}}</p>
+            <p class="card-text">{{articles.author}}</p>
+            <p class="card-text">{{articles.id}}</p>
+            <a href="{{articles.url}}" class="btn" style="background-color: green;">Read More</a>
+        </div>
+    </div>
+</div>
+
+{% endfor %}
+{% endmacro %}
