--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,11 +9,11 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> TOP NEWS </a>
+            <a class="navbar-brand" href=""> TOP NEWS </a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="/">Politics</a></li>
+                <li><a href="/general">General news</a></li>
                 <li><a href="/">Business</a></li>
                 <li><a href="/">Education</a></li>
                 <li><a href="/">Health</a></li>
