--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -15,9 +15,9 @@
             <ul class="nav navbar-nav">
                 <li><a href="/general">General news</a></li>
                 <li><a href="/business">Business</a></li>
-                <li><a href="/">Education</a></li>
-                <li><a href="/">Health</a></li>
-                <li><a href="/">Sports</a></li>
+                <li><a href="/entertainment">Entertainment</a></li>
+                <li><a href="/health">Health</a></li>
+                <li><a href="/sports">Sports</a></li>
         </div>
 
     </div>
