--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,7 +9,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href=""> TOP NEWS </a>
+            <a class="navbar-brand" href="/"> TOP NEWS  Sources</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
